--- a/page2.html
+++ b/page2.html
@@ -1,1 +1,3 @@
-<h1>This a page. Until I figure out what to do with it!</h1>
+<h1>This a page. Until I figure out what to do with it!
+    Just to check wether the redirecting is working or not because this is a dead end.
+</h1>
